01-lab-setup/02-tier2-setup/resources/victoriametrics/httproutes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: victoriametrics
spec:
  parentRefs:
  - name: k8s-lab-https
    namespace: envoy-gateway-system
    sectionName: lab-https-termination
 
  hostnames:
  - "grafana.lab.k8s.local"
 
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: vmks-grafana 
      port: 80
